2021-08-16_ships.spec.ts

--- a/src/main/resources/blog/2021-08-16_ships.md
+++ b/src/main/resources/blog/2021-08-16_ships.md
@@ -40,7 +40,7 @@ You can see your ships on the city.
  <!-- SNAPSHOT status=200 -->  
  * Click on the "leonard" city "Capital"
  * You should be at the screen of a city.
- * There should be 1 "leonard" ships.
+ * There should be 1 "leonard" ship.
  * There should be the "leonard" "Beagle" ship.
 
 ### Details of the ship
@@ -55,7 +55,7 @@ You can see the details of a ship.
 
 ### Changing the name
 
-You can change the name of your ships.
+You can change the name of your ship.
 
  * Enter new name "Cerritos".
  * Click the change name button.
@@ -75,9 +75,9 @@ Penny can see that she also have ships, at least, one.
  * Given there is the next player "penny".
  <!-- SNAPSHOT status=200 -->
  * Click on the "penny" city "Capital"
- * There should be 1 "penny" ships.
+ * There should be 1 "penny" ship.
  * There should be the "penny" "Beagle" ship.
- * There should be 0 "leonard" ships.
+ * There should be 0 "leonard" ship.
 
 ## Loading and unloading
 
