--- a/src/main/resources/blog/2021-08-18_sailing.md
+++ b/src/main/resources/blog/2021-08-18_sailing.md
@@ -79,7 +79,7 @@ You can see the dock directly from here.
  * Click on see the dock.
  * You should be at the screen of a city.
  * The name should be "Capital".
- * There should be 1 "leonard" ships.
+ * There should be 1 "leonard" ship.
  * Go back to the previous screen.
  * You should be at the screen of a ship.
  * The name should be "Beagle".
@@ -124,14 +124,14 @@ You are not still have not arrived at penny city:
  * Given there is the next player "penny".
  <!-- SNAPSHOT status=200 -->
  * Click on the "penny" city "Capital"
- * There should be 0 "leonard" ships.
+ * There should be 0 "leonard" ship.
 
 But when arrives, penny can see the ship.
 
  * End the round.
  <!-- SNAPSHOT status=200 -->
  * Click on the "penny" city "Capital"
- * There should be 1 "leonard" ships.
+ * There should be 1 "leonard" ship.
 
 ### And seen strange ports
 
@@ -145,8 +145,8 @@ You can see the visiting city from the ship.
  * Click on see the dock.
  * You should be at the screen of a city.
  * The name should be "Capital".
- * There should be 1 "leonard" ships.
- * There should be 1 "penny" ships.
+ * There should be 1 "leonard" ship.
+ * There should be 1 "penny" ship.
  * Go back to the previous screen.
  * You should be at the screen of a ship.
 
@@ -229,7 +229,7 @@ The ship is not at home yet.
  * Go back to the previous screen.
  * You should be at the game screen.  
  * Click on the "leonard" city "Capital"
- * There should be 0 "leonard" ships.
+ * There should be 0 "leonard" ship.
 
 Wait few turns until arrive.
 
@@ -243,7 +243,7 @@ Wait few turns until arrive.
 
 And still no arrived home.
 
- * There should be 0 "leonard" ships.
+ * There should be 0 "leonard" ship.
 
 Yet, One more round to go.
 
@@ -258,4 +258,4 @@ And...
  * The destination sail should be inactive.
  * It should be docked at the "leonard" city "Capital".
  * Click on see the dock.
- * There should be 1 "leonard" ships.
+ * There should be 1 "leonard" ship.
