--- a/src/main/resources/blog/2021-08-19_fog.md
+++ b/src/main/resources/blog/2021-08-19_fog.md
@@ -75,12 +75,12 @@ Start a game with leonard, and look at the ship.
  * The name should be "Capital".
  * The owner should be "leonard".
  * The location should be 0.
- * There should be 0 "leonard" ships.
+ * There should be 0 "leonard" ship.
  * There should be no population.
 
 ### Others ships
 
-You can only see you ships.
+You can only see you ship.
 
  * Go back to the game screen.
  * There should be 0 ship from other players.
@@ -97,7 +97,7 @@ Do you want to see more? Let's move your ship closer:
  * Click on the "leonard" city "Capital".
  * The name should be "Capital".
  * The owner should be "leonard".
- * There should be 0 "leonard" ships.
+ * There should be 0 "leonard" ship.
  * There should be no population.
 
 You still cannot see details.
@@ -154,8 +154,8 @@ She can see the details of the city:
  * The name should be "Capital".
  * The owner should be "leonard".
  * The location should be 0.
- * There should be 1 "leonard" ships.
- * There should be 1 "penny" ships.
+ * There should be 1 "leonard" ship.
+ * There should be 1 "penny" ship.
  * The population should be 15.
 
 ### Third players
@@ -169,7 +169,7 @@ The third cannot see other ships on the city, if they are not on the city.
  * The name should be "Capital".
  * The owner should be "leonard".
  * The location should be 0.
- * There should be 0 "leonard" ships.
+ * There should be 0 "leonard" ship.
  * There should be no population.
 
 But if they go to the city, then details are revealed.
@@ -183,9 +183,9 @@ But if they go to the city, then details are revealed.
  * The name should be "Capital".
  * The owner should be "leonard".
  * The location should be 0.
- * There should be 1 "leonard" ships.
- * There should be 1 "penny" ships.
- * There should be 1 "sheldon" ships.
+ * There should be 1 "leonard" ship.
+ * There should be 1 "penny" ship.
+ * There should be 1 "sheldon" ship.
  * The population should be 20.
 
 ### Spotting moving ships
