--- a/src/main/resources/blog/2021-10-14_houses.md
+++ b/src/main/resources/blog/2021-10-14_houses.md
@@ -1,1 +1,37 @@
-Houses
+---
+writer: mpique
+coder: -
+---
+# Houses
+
+Houses are the most important buildings at the beginning of a game. They will make your city's population grow faster!
+
+## Playing game
+
+### We need to create a game and join
+
+Create and start playing one of your games:
+
+* Given there is "arnau" playing their game "together".
+ <!-- SNAPSHOT status=200 -->  
+* And there is the next player "marta".
+ <!-- SNAPSHOT status=200 -->
+* Click on the "arnau" city.
+* There should be no population.
+
+### Gather the necessary resources
+
+* "arnau" generates 35 wood.
+<!-- SNAPSHOT status=200 -->
+* "arnau" generates 25 stone.
+ <!-- SNAPSHOT status=200 -->
+* "arnau" should have 35 wood and 25 stone.
+
+### Building a House
+
+* You should be at the game screen.
+* "arnau" should be the current player.
+* "arnau" should click on "Create House".
+ <!-- SNAPSHOT status=200 -->
+* "arnau" should have 15 wood and 15 stone
+* End round; The population should be 2.
