--- a/src/main/resources/blog/2021-10-16_wheat.md
+++ b/src/main/resources/blog/2021-10-16_wheat.md
@@ -1,8 +1,8 @@
 ---
 writer: jazogue
-coder: -
+coder: Belda7
 ---
-# Materials
+# Wheat
 
 Finally you have some way to create buildings and objects. Materials have come to stay!
 Build everything you want and upgrade your city to destroy others!
@@ -36,7 +36,6 @@ In this case we will talk about WHEAT!
 │                   │              │                 │
 └───────────────────┘              └─────────────────┘
 ```
-                       
 
 ## Playing game
 
@@ -70,39 +69,34 @@ And back.
 
 You can see your materials in the game screen.
 
- * "arnau" should have 50 wheat.
- * "marta" should have 50 wheat.
-
-And marta can see yours:
+ * "arnau" should have a quantity of 50 material "WHEAT".
 
  * Go to Next player.
  <!-- SNAPSHOT status=200 -->
  * You should be at the game screen.
  * "marta" should be the current player.
- * "arnau" should have 50 wheat.
- * "marta" should have 50 wheat.
+ * "marta" should have a quantity of 50 material "WHEAT".
  
 And also in the general list.
 
  * You should be at the game screen.
  * "marta" should be the current player.
- * "arnau" should have 50 wheat.
- * "marta" should have 50 wheat.
+ * "marta" should have a quantity of 50 material "WHEAT".
 
 ### Obtaining Materials
 
 Every player will get 50 wheat each turn.
 
+ * End the round.
+ * <!-- SNAPSHOT status=200 -->
+ * Game round should be 2.
  * Go to Next player.
  <!-- SNAPSHOT status=200 -->
- * You should be at the game screen.
  * "arnau" should be the current player.
- * "arnau" should have 100 wheat.
- * "marta" should have 50 wheat.
+ * "arnau" should have a quantity of 100 material "WHEAT".
 
  * Go to Next player.
  <!-- SNAPSHOT status=200 -->
  * You should be at the game screen.
  * "marta" should be the current player.
- * "arnau" should have 100 wheat.
- * "marta" should have 100 wheat.
+ * "marta" should have a quantity of 100 material "WHEAT".
