Backend Tests + coverage 100%

--- a/src/main/resources/blog/2021-10-14_houses.md
+++ b/src/main/resources/blog/2021-10-14_houses.md
@@ -1,6 +1,6 @@
 ---
 writer: mpique
-coder: -
+coder: amoratoi
 ---
 # Houses
 
@@ -12,27 +12,32 @@ Houses are the most important buildings at the beginning of a game. They will ma
 
 Create and start playing one of your games:
 
-* Given there is "arnau" playing their game "together".
+ * Given there is "arnau" playing their game "together".
  <!-- SNAPSHOT status=200 -->  
-* And there is the next player "marta".
- <!-- SNAPSHOT status=200 -->
-* Click on the "arnau" city.
-* Population should be 10.
+ * Click on the "arnau" city "Capital".
+ * You should be at the screen of a city.
+ * The name should be "Capital".
+ 
+You can see here the population:
+
+ * The population should be 10.
 
 ### Gather the necessary resources
-
-* "arnau" generates 35 wood.
-<!-- SNAPSHOT status=200 -->
-* "arnau" generates 25 stone.
- <!-- SNAPSHOT status=200 -->
-* "arnau" should have 35 wood and 25 stone.
+ * Skip 1 rounds.
+ <!-- SNAPSHOT status=200 --> 
+ * "arnau" should have a quantity of 70 material "WOOD".
+ * "arnau" should have a quantity of 75 material "STONE".
 
 ### Building a House
+ * "arnau" should be the current player.
 
-* You should be at the game screen.
-* "arnau" should be the current player.
-* "arnau" should click on "Create House".
- <!-- SNAPSHOT status=200 -->
-* "arnau" should have 15 wood and 15 stone.
-* End round.
-* The population should be 12.
+ * Click the Create House button
+ <!-- SNAPSHOT status=200 --> 
+ * "arnau" should have a quantity of 1 house.
+ * "arnau" should have a quantity of 50 material "WOOD".
+ * "arnau" should have a quantity of 40 material "STONE".
+ * Skip 1 rounds.
+ <!-- SNAPSHOT status=200 --> 
+ * Click on the "arnau" city "Capital".
+ * You should be at the screen of a city.
+ * The population should be 13.
