Front passes + Coverage 100%

--- a/src/main/resources/blog/2021-10-14_houses.md
+++ b/src/main/resources/blog/2021-10-14_houses.md
@@ -31,13 +31,15 @@ You can see here the population:
 ### Building a House
  * "arnau" should be the current player.
 
- * Click the Create House button
+ * Click the Create house button
  <!-- SNAPSHOT status=200 --> 
+ * Skip 1 rounds.
+ <!-- SNAPSHOT status=200 -->
  * "arnau" should have a quantity of 1 house.
- * "arnau" should have a quantity of 50 material "WOOD".
- * "arnau" should have a quantity of 40 material "STONE".
+ * "arnau" should have a quantity of 85 material "WOOD".
+ * "arnau" should have a quantity of 65 material "STONE".
  * Skip 1 rounds.
  <!-- SNAPSHOT status=200 --> 
  * Click on the "arnau" city "Capital".
  * You should be at the screen of a city.
- * The population should be 13.
+ * The population should be 15.
