--- a/src/main/resources/blog/2021-10-28_city_wall.md
+++ b/src/main/resources/blog/2021-10-28_city_wall.md
@@ -1,11 +1,13 @@
 ---
 writer: garagon4
-coder: -
+coder: jazogue
 ---
 # City Wall
 
 The city need a defensive structure to protect our population, our houses and our materials!!
 
+### UI Dessign
+```      
 View Player                                 View Player
 ┌──────────────────────────┐                ┌───────────────────────────┐
 │Game created              │                │Game created               │
@@ -19,32 +21,33 @@ View Player                                 View Player
 │  │Create City Wall    │  │                │                           │
 │  └────────────────────┘  │                │                           │
 └──────────────────────────┘                └───────────────────────────┘
-
-
-
+```      
 ## Playing game
 
 ### We need to create a game and join
 
 Create and start playing one of your games:
 
-* Given there is "arnau" playing their game "together".
+ * Given there is "arnau" playing their game "together".
  <!-- SNAPSHOT status=200 -->  
-* And there is the next player "marta".
- <!-- SNAPSHOT status=200 -->
-* Click on the "arnau" city.
+ * Click on the "arnau" city "Capital".
+ * You should be at the screen of a city.
+ * The name should be "Capital".
+ * "arnau" should have a quantity of 0 wall.
 
-### Gather the necessary resources
 
-* "arnau" generates a quantity of 70 material "STONE".
-  <!-- SNAPSHOT status=200 -->  
-* "arnau" generates a quantity of 30 material "WOOD".
-  <!-- SNAPSHOT status=200 -->  
-* "arnau" should have a quantity of 70 material "STONE".
-* "arnau" should have a quantity of 30 material "WOOD".
+### Building a Wall
+ * Skip 1 rounds.
+ <!-- SNAPSHOT status=200 --> 
+ * "arnau" should be the current player.
+ * "arnau" should have a quantity of 70 material "WOOD".
+ * "arnau" should have a quantity of 75 material "STONE".
 
-### Building an Armoury
-
-* You should be at the game screen.
-* "arnau" should be the current player.
-* "arnau" should click on "Create City Wall".
+ * Click the Create wall button
+ <!-- SNAPSHOT status=200 --> 
+ * Skip 1 rounds.
+ <!-- SNAPSHOT status=200 --> 
+ * "arnau" should have a quantity of 1 wall.
+ * "arnau" should have a quantity of 70 material "WOOD".
+ * "arnau" should have a quantity of 50 material "STONE".
+ 
