--- a/src/main/resources/blog/2021-08-14_cities.md
+++ b/src/main/resources/blog/2021-08-14_cities.md
@@ -8,138 +8,76 @@ Finally, there is some game logic here.
 Yes, this is a game about cities.
 
 You can see your city, and the cities of your 
-friends in the game.
-
-### UI Dessign
-
-```                   
-                                                                         | < | is go back to the previous screen
-     View Game:                                                           View City:
-   +---------------------------------------------------+                +----------------------------+
-   | ©               …topbar… ( Multiplayer ) ( Next ) |                |       ...topbar...         |
-   +---------------------------------------------------+  My            +----------------------------+  
-   |  Player leonard plays game1 created by leonard    |  city          | < | Player leo...by leonard|   
-   +---------------------------------------------------+  Untitled      +----------------------------+   
-   |                                                   | -------------> | City Capital               | 
-   |  My cities:                                       |                |                            |
-   |  +---------+                                      |                | New Name: [ Leoland ]      |  : hidden
-   |  | Capital |                                      |                | ( change name )            |  : in
-   |  +---------+                                      |                |                            |    pennyland
-   |                                                   |                +----------------------------+
-   |  Cities of penny:                                 |   
-   |  +---------------+                                |   
-   |  | Pennyland     |                                |   
-   |  +---------------+                                |   
-   :                                                   :   
-   +---------------------------------------------------+                                                                                                       
-```                                                                 
+friends in the game. 
 
 ## Playing game
 
 ### We need to create a game and join
 
-Create and start playing one of your games: 
+Start playing with penny. 
 
- * Given there is "leonard" playing their game "together".
- <!-- SNAPSHOT status=200 -->  
- * You should be at the game screen.  
+ * Given that "penny" is playing.
+ * Go to the next player "leonard"
+ <!-- SNAPSHOT status=200 -->
+ * You should be at the "game" screen.  
  * "leonard" should be the current player.
- * Playing game should be "together" created by "leonard".
 
-Just make sure, that the next player is penny.
+And you can see your cities:
 
- * Given there is the next player "penny".
- <!-- SNAPSHOT status=200 -->
- * You should be at the game screen.
- * "penny" should be the current player.
- * Playing game should be "together" created by "leonard".
+ * "leonard" should have 1 "city".
+ * "leonard" should have the "Capital" "city".
 
-And back.
+And you can see the penny cities.
 
- * Go to Next player.
- <!-- SNAPSHOT status=200 -->
- * You should be at the game screen.
- * "leonard" should be the current player.
- * Playing game should be "together" created by "leonard".
+ * "penny" should have 1 "city".
+ * "penny" should have the "Capital" "city".
+  
+### City details
 
-### See your cities
+You can see your city details.
 
-You can see your cities in the game screen.
+ * Go to the "leonard" "city" "Capital".
+ * You should be at the "entity" screen.
+ * You should be at the screen of a "city".
+ * The _name_ should be "Capital".
+ * The _type_ should be "city".
+ * The _owner_ should be "leonard".
 
- * "leonard" should have 1 city. 
- * "leonard" should have the "Capital" city.
- * "penny" should have 1 city.
- * "penny" should have the "Capital" city.
+And players can change the name of cities.
 
-And penny can see yours:
-
- * Go to Next player.
- <!-- SNAPSHOT status=200 -->
- * You should be at the game screen.
- * "penny" should be the current player.
- * "leonard" should have 1 city.
- * "leonard" should have the "Capital" city.
- * "penny" should have 1 city.
- * "penny" should have the "Capital" city.
-
-### Change the name of a city
-
-You can change the name of a city.
-Make penny open the screen of the city:
-
- * Click on the "penny" city "Capital"
- * You should be at the screen of a city.
- * The name should be "Capital".
- * Enter new name "Pennyland".
+ * Enter new name "Leoland".
  * Click the change name button.
  <!-- SNAPSHOT status=200 -->
+ * You should be at the screen of a "city".
+ * The _name_ should be "Leoland".
 
-And now you can see the new name.
+### Others cities
 
- * You should be at the screen of a city.
- * The name should be "Pennyland".
+You can see others cities.
+
  * Go back to the previous screen.
- 
-And also in the general list.
+ * You should be at the "game" screen.
+ * Go to the "penny" "city" "Capital".
+ * You should be at the "entity" screen.
+ * You should be at the screen of a "city".
+ * The _name_ should be "Capital".
+ * The _type_ should be "city".
+ * The _owner_ should be "penny".
 
- * You should be at the game screen.
- * "penny" should be the current player.
- * "leonard" should have 1 city.
- * "leonard" should have the "Capital" city.
- * "penny" should have 1 city.
- * "penny" should have the "Pennyland" city.
+But you cannot change the others cities name.
 
-And leonard can see the change.
+ * There should be no _change name_.
 
- * Go to Next player.
+### Others see the changes
+
+Others players can see its own cities, and others players.
+And if the name changes, they will see it.
+
+ * Go to the next player "leonard"
  <!-- SNAPSHOT status=200 -->
- * You should be at the game screen.
+ * You should be at the "game" screen.
  * "leonard" should be the current player.
- * "leonard" should have 1 city.
- * "leonard" should have the "Capital" city.
- * "penny" should have 1 city.
- * "penny" should have the "Pennyland" city.
-
-### You cannot change others city name
-
-You are the owner of your cities, others are not,
-they should not change the name of your cities,
-so you cannot change theirs. That's call
-reciprocity, ok, sheldon, I know that it was
-for your advantage.
-
- * Click on the "penny" city "Pennyland"
- * You should be at the screen of a city.
- * The name should be "Pennyland".
- * There is no new city name formulary.
-
-But you can see it in detail.
-
-### And go back
-
-You can always go back from any city.
-
- * Go back to the previous screen.
- * You should be at the game screen.
- * "leonard" should be the current player.
- * There should not be a back button.
+ * "penny" should have 1 "city".
+ * "penny" should have the "Capital" "city".
+ * "leonard" should have 1 "city".
+ * "leonard" should have the "Leoland" "city".
